<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Simpill</string>
    <string name="nullString" translatable="false">null</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="back">back</string>
    <string name="ok">Ok</string>
    <string name="notification_id" translatable="false">Notification ID</string>
    <string name="notification_pill_name" translatable="false">Pill Taken From Notification Click</string>
    <string name="primary_key_id" translatable="false">Primary Key Id</string>
    <string name="pill_name" translatable="false">pill name</string>
    <string name="pill_time" translatable="false">pill time</string>
    <string name="pill_frequency" translatable="false">pill frequency</string>
    <string name="pill_start_date" translatable="false">pill frequency</string>
    <string name="pill_date" translatable="false">pill date</string>
    <string name="pill_amount" translatable="false">pill amount</string>
    <string name="is_pill_taken" translatable="false">is pill taken</string>
    <string name="time_taken" translatable="false">time taken</string>
    <string name="bottle_color" translatable="false">bottle color</string>
    <string name="clock_content_description">Clock Icon</string>
    <string name="calendar_content_description">Calendar Icon</string>
    <string name="pill_refill_content_description">Pill Refill Date Button</string>
    <string name="pill_bottle_content_description">Pill Bottle Icon</string>
    <string name="pill_content_description">Pill Icon</string>
    <string name="reset_pill_content_description">Reset Pill Taken Button</string>
    <string name="purple_pill_bottle_content_description">Purple Pill Bottle</string>
    <string name="light_purple_pill_bottle_content_description">Light Purple Pill Bottle</string>
    <string name="light_blue_pill_bottle_content_description">Light Blue Pill Bottle</string>
    <string name="red_pill_bottle_content_description">Red Pill Bottle</string>
    <string name="light_red_pill_bottle_content_description">Light Red Pill Bottle</string>
    <string name="pink_pill_bottle_content_description">Pink Pill Bottle</string>
    <string name="dark_green_pill_bottle_content_description">Dark Green Pill Bottle</string>
    <string name="green_pill_bottle_content_description">Green Pill Bottle</string>
    <string name="light_green_pill_bottle_content_description">Light Green Pill Bottle</string>
    <string name="dark_orange_pill_bottle_content_description">Dark Orange Pill Bottle</string>
    <string name="orange_pill_bottle_content_description">Orange Pill Bottle</string>
    <string name="light_orange_pill_bottle_content_description">Light Orange Pill Bottle</string>
    <string name="warning_icon_content_description">Warning Icon</string>
    <string name="blue_theme_button_content_description">Blue Theme Button</string>
    <string name="grey_theme_button_content_description">Grey Theme Button</string>
    <string name="purple_theme_button_content_description">Purple Theme Button</string>
    <string name="plus_button">Plus button</string>
    <string name="minus_button">Minus Button</string>
    <string name="enter_pill_name">Pill Name?</string>
    <string name="enter_pill_time_reminders">Reminders?</string>
    <string name="enter_pill_refill_date_reminder">Refill Date?</string>
    <string name="enter_pill_amount">Supply?</string>
    <string name="create_pill_btn">Create</string>
    <string name="update_pill_btn">Update</string>
    <string name="non_unique_pill_name_warning">This name is already in use :)</string>
    <string name="pill_name_warning">Your pill\'s name must begin with a letter.</string>
    <string name="set_date">Please set a date for your refill reminder.</string>
    <string name="pill_supply_warning">Your pill supply amount must be greater than 0.</string>
    <string name="fill_fields_warning">Error! Please fill out all of the fields first :)</string>
    <string name="theme">Theme</string>
    <string name="time">Time</string>
    <string name="notifications">Notifications</string>
    <string name="sticky">Sticky Notifications</string>
    <string name="_24_hour_format">24 Hour Format</string>
    <string name="database">Database</string>
    <string name="delete_all_pills">Delete All Pills</string>
    <string name="theme_applied">%1$s theme applied :)</string>
    <string name="select_theme_dialog_title">Select</string>
    <string name="change_theme">Change Theme</string>
    <string name="simpillAboutParagraph_1">Simpill is a free and open-source medication reminder app without any trackers, annoying ads or unnecessary permissions.</string>
    <string name="simpillAboutParagraph_2">Simpill is provided as a completely free application and it does not generate any revenue from ads or selling data.\n\nIf would you to like to support Simpill and its future development, there are a number of donation options:</string>
    <string name="monero" translatable="false">Monero</string>
    <string name="bitcoin" translatable="false">Bitcoin</string>
    <string name="pandacoin" translatable="false">Pandacoin</string>
    <string name="MoneroWebsite" translatable="false">https://www.getmonero.org</string>
    <string name="BitcoinWebsite" translatable="false">https://bitcoin.org</string>
    <string name="PandacoinWebsite" translatable="false">https://pandacoin.tech</string>
    <string name="monero_address" translatable="false">86ywTu1eDABJB2CxGf9mwMbX6ibfc7pga1XusQCrfvMYdNpNPto1BaDSbWeas13Nkg3iLigkzS7wSGc8YoQxEkHhHdrA4Ni</string>
    <string name="bitcoin_address" translatable="false">bc1q8r90zc8j8a2rvkq4ds8374pxh3rpccxgnjx5x2</string>
    <string name="pandacoin_address" translatable="false">pn1qdfzqkjg3gh6az5al6pf93w8a9phj7xmz28jrme</string>
    <string name="take_at">Take at %1$s</string>
    <string name="take_at_custom_interval">Take at %1$s\n(%2$s)</string>
    <string name="taken_at">Taken at %1$s</string>
    <string name="database_reset_toast">All pills deleted!</string>
    <string name="pill_created_toast">%1$s created :)</string>
    <string name="already_in_about_toast">You are already in the About section!</string>
    <string name="already_in_settings_toast">You are already in the Settings section!</string>
    <string name="device_restart_toast">Resetting alarms for Simpill :)</string>
    <string name="time_format_24hr_toast">Time format set to 24hr.</string>
    <string name="time_format_12hr_toast">Time format set to 12hr.</string>
    <string name="pill_taken_toast">%1$s taken.</string>
    <string name="pill_reset_toast">%1$s reset.</string>
    <string name="sticky_notifications_enabled_toast">Sticky notifications enabled.</string>
    <string name="sticky_notifications_disabled_toast">Sticky notifications disabled.</string>
    <string name="unknown_error_toast">Unknown error in Simpill :(</string>
    <string name="append_updated_toast">%1$s updated :)</string>
    <string name="pill_db_deleted_toast">All pills deleted.</string>
    <string name="append_pill_deleted_toast">%1$s deleted.</string>
    <string name="pill_bottle_amount_toast">You have %1$d %2$s pills left.</string>
    <string name="stockup_notification_title">Stockup Reminder</string>
    <string name="dont_forget_stockup">Don\'t forget to stockup on your %1$s soon :)</string>
    <string name="reminder_notification_description">It\'s time to take your medication: %1$s :)</string>
    <string name="welcome_dialog_title">Welcome</string>
    <string name="welcome_dialog_message">To create your first pill, select the plus button at the bottom of your screen.</string>
    <string name="pill_name_dialog_tag" translatable="false">Pill Name Dialog</string>
    <string name="pill_name_dialog_title">Pill Name</string>
    <string name="pill_name_dialog_msg">Please enter a name for your medication by clicking the line below:\n</string>
    <string name="pill_name_dialog_text_hint">Name - keep it short :)</string>
    <string name="done">Done</string>
    <string name="amount">Amount</string>
    <string name="pill_deletion_dialog_title">Delete?</string>
    <string name="pill_deletion_dialog_message">Are you sure you want to delete %1$s?\n\nThis cannot be undone!</string>
    <string name="pill_db_reset">Delete Pills</string>
    <string name="pill_db_reset_warning">Would you like to delete the entire pill database?\n\nWARNING: This will remove all pills - it CANNOT be undone!</string>
    <string name="reset_pill_dialog_title">Reset?</string>
    <string name="reset_pill_dialog_message">Would you like to reset the taken status of %1$s?</string>
    <string name="past_date_dialog_title">Wrong Date?</string>
    <string name="past_date_dialog_message">Unless you have access to a TARDIS, the date cannot be set in the past.</string>
    <string name="choose_frequency_dialog_text">How often do you take this medication?</string>
    <string name="choose_frequency_dialog_title">Frequency</string>
    <string name="choose_frequency_dialog_custom_interval">Set a custom interval instead</string>
    <string name="choose_frequency_dialog_weekly">Weekly</string>
    <string name="choose_frequency_dialog_every_other_day">Every other day</string>
    <string name="choose_frequency_dialog_daily">Daily</string>
    <string name="choose_frequency_dialog_multiple_daily">Multiple times a day</string>
    <string name="time_format_12hr" translatable="false">hh:mm a</string>
    <string name="time_format_24hr" translatable="false">HH:mm</string>
    <string name="date_format" translatable="false">yyyy-MM-dd</string>
    <string name="date_format_with_timezone" translatable="false">yyyy-MM-dd Z</string>
    <string name="full_date_time_format" translatable="false">yyyy-MM-dd, HH:mm Z</string>
    <string name="take_pill_content_description">Take Pill Button</string>
    <string name="choose_frequency_dialog_reminder_amount_text">How many times a day do you take this medication?</string>
    <string name="btc_address_copied">BTC address copied :)</string>
    <string name="xmr_address_copied">XMR address copied :)</string>
    <string name="pnd_address_copied">PND address copied :)</string>
    <string name="custom_interval_dialog_text">Set a custom interval (in days) for your medication reminder using the buttons below:</string>
    <string name="custom_interval_dialog_title">Interval</string>
    <string name="clocks_dialog_time_text">Time #%1$d</string>
    <string name="chooses_times_dialog_text">Set the reminder times for your medication using the clocks below:</string>
    <string name="context_menu_update">Update</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_change_color">Change Color</string>
    <string name="donation_dialog_message">If you enjoy using Simpill, please consider making a donation :)\n\nSimpill is completely free and open-source without any ads or trackers.\n\nYou can donate using one of the buttons below:</string>
    <string name="reminder_already_taken_description">You have already taken your %1$s :)</string>
    <string name="paypal_donation_link" translatable="false">https://www.paypal.com/donate/?hosted_button_id=A8UNN2A4D3P3G</string>
    <string name="simpill_paid_version_link" translatable="false">https://play.google.com/store/apps/details?id=com.winston69.simpill.ty</string>
    <string name="blue">Blue</string>
    <string name="grey">Grey</string>
    <string name="dark">Dark</string>
    <string name="purple">Purple</string>
    <string name="dark_dialogs_setting">Dark Dialogs</string>
    <string name="dark_dialogs_toast">Dark dialogs applied :)</string>
    <string name="light_dialogs_toast">Light dialogs applied :)</string>
    <string name="start_date">Start Date</string>
    <string name="custom_interval_start_day_text">Click the calendar below, to select the start date for your medication reminders.</string>
</resources>