<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="20dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/custom_dialog_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/dialog_background">

        <TextView
            android:id="@+id/dialog_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_background_purple"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/pill_name_dialog_title"
            android:textSize="35sp"
            android:fontFamily="@font/inter_medium"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/dialog_title_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialog_title_textview"
            app:srcCompat="@drawable/ic_pill"
            android:contentDescription="@string/pill_content_description"/>

        <TextView
            android:id="@+id/dialog_message_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:fontFamily="@font/inter_reg"
            android:text="@string/pill_name_dialog_msg"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:lineSpacingMultiplier="1.15"
            app:layout_constraintTop_toBottomOf="@id/dialog_title_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/pill_name_dialog_text_hint"
            android:fontFamily="@font/inter_reg"
            android:textColor="@color/black"
            android:textColorHint="@color/gray"
            android:backgroundTint="@color/light_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/dialog_message_textview"
            app:layout_constraintStart_toStartOf="@id/dialog_message_textview"
            app:layout_constraintTop_toBottomOf="@id/dialog_message_textview"
            android:autofillHints="name"
            tools:ignore="UnusedAttribute" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="48dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/done"
        android:textSize="18sp"
        android:textColor="@color/alice_blue"
        android:textAllCaps="false"
        android:background="@drawable/dialog_bottom_btn_purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/custom_dialog_constraint_layout"
        app:layout_constraintTop_toBottomOf="@id/custom_dialog_constraint_layout"/>








</androidx.constraintlayout.widget.ConstraintLayout>