<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="20dp"
    android:layout_margin="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/customDialogLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dialogTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_background_purple"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/start_date"
            android:textColor="@color/white"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/imageView13"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/pill_content_description"
            app:layout_constraintBottom_toBottomOf="@+id/dialogTitleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/dialogTitleTextView"
            android:background="@drawable/ic_clock_svgrepo_com" />


        <ImageButton
            android:id="@+id/calendar_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/textView2"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:background="@drawable/ic_calendar"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/truenoreg"
            android:text="@string/custom_interval_start_day_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitleTextView" />

        <TextView
            android:id="@+id/user_date_textview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            android:text="User Start date here"
            android:textSize="18sp"
            android:fontFamily="@font/truenoreg"
            app:layout_constraintBottom_toBottomOf="@+id/calendar_btn"
            app:layout_constraintEnd_toEndOf="@id/textView2"
            app:layout_constraintStart_toEndOf="@+id/calendar_btn"
            app:layout_constraintTop_toTopOf="@+id/calendar_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/done_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/done"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/alice_blue"
        android:background="@drawable/dialog_bottom_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/customDialogLayout"
        app:layout_constraintTop_toBottomOf="@id/customDialogLayout"/>


</androidx.constraintlayout.widget.ConstraintLayout>